Fix EZP-22124: inline image alignment is not respected
Added the styles to correctly align emebed inline

--- a/Resources/public/css/bootstrap.css
+++ b/Resources/public/css/bootstrap.css
@@ -4512,6 +4512,12 @@ a.thumbnail:hover {
   margin-right: auto;
   text-align: center;
 }
+.embed-inline-left {
+  float: left;
+}
+.embed-inline-right {
+  float: right;
+}
 .block .left {
   width: 48%;
   float: left;
